Did a little work on the code

--- a/bot.conf
+++ b/bot.conf
@@ -1,5 +1,10 @@
 configBot {
+# token should look like: "bot1509893058:AAD3uC_cmyxDQJfBZtQgs2E4-K55xivO8Wc" 
   token = "bot"
+# api should be "telegram" or "vk" . By default - telegram
   api = "telegram"
-  logg_level = "WARN"
+# logg_level should be "DEBUG" or "INFO" or "WARN" or "ERROR". By default - "INFO"
+  logg_level = "DEBUG"
+# The number of times to retry the returned message. By default - 1
+  repeat = 1
 }
