--- a/local_bot.conf
+++ b/local_bot.conf
@@ -1,8 +1,10 @@
 configBot {
+# api should be "telegram" or "vk" . By default - telegram
+  api = "telegram"
 # token should look like: "bot1509893058:AAD3uC_cmyxDQJfBZtQgs2E4-K55xivO8Wc" 
   token = "bot1504893058:AAH3uC_cmkxDQJfBXtQgs2E4-K64xivO3Wc"
-# api should be "telegram" or "vk"
-  api = "telegram"
-# logg_level should be "DEBUG" or "INFO" or "WARN" or "ERROR"
+# logg_level should be "DEBUG" or "INFO" or "WARN" or "ERROR". By default - "INFO"
   logg_level = "DEBUG"
+# The number of times to retry the returned message. By default - 1
+  repeat = 2
 }
