Member of repetitions

--- a/bot.conf
+++ b/bot.conf
@@ -1,5 +1,5 @@
 configBot {
-# token should look like: "bot1509893058:AAD3uC_cmyxDQJfBZtQgs2E4-K55xivO8Wc" 
+# token should look like: "bot" 
   token = "bot"
 # api should be "telegram" or "vk" . By default - telegram
   api = "telegram"
