Telegram bot finished

--- a/bot.conf
+++ b/bot.conf
@@ -7,4 +7,10 @@ configBot {
   logg_level = "DEBUG"
 # The number of times to retry the returned message. By default - 1
   repeat = 1
+# Message for command /repeat
+  messageForRepeat = " repetitions are set for you\n Choose how much you need in the future"
+# Message for command /help
+  messageForHelp = " /help - this text\n /command - set the number of repetitions"
+# timeout (sec)
+timeout = 5
 }
