--- a/local_bot.conf
+++ b/local_bot.conf
@@ -6,5 +6,11 @@ configBot {
 # logg_level should be "DEBUG" or "INFO" or "WARN" or "ERROR". By default - "INFO"
   logg_level = "DEBUG"
 # The number of times to retry the returned message. By default - 1
-  repeat = 2
+  repeat = 1
+# Message for command /repeat
+  messageForRepeat = " repetitions are set for you\n Choose how much you need in the future"
+# Message for command /help
+  messageForHelp = " /help            - this text\n/command - set the number of repetitions"
+# timeout (sec)
+timeout = 10
 }
