--- a/telegram-vk-bot.cabal
+++ b/telegram-vk-bot.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 240a840009c0d14008d7ccbc0fb9e54c00d6957248444acdbdf79c01aa7f25c4
+-- hash: 0fd8644ecd6a1aa161e9c9f14118f19eee74a7077cb4837da6fc4ad726775aea
 
 name:           telegram-vk-bot
 version:        0.1.0.0
@@ -29,14 +29,15 @@ library
   exposed-modules:
       Bot
       Config
-      DataTelegram
-      DataVK
       Drop
       Log
       Logger
       MapR
       Telegram
+      Telegram.Data
       VK
+      VK.Data
+      VK.Internal
   other-modules:
       Paths_telegram_vk_bot
   hs-source-dirs:
