Service whith Telegram

--- a/bot.conf
+++ b/bot.conf
@@ -1,6 +1,6 @@
 configBot {
 # api should be "telegram" or "vk" . By default - telegram
-  api = "vk"
+  api = "telegram"
 # only for vk. group_id should look like: "201341824"
   group_id = ""
 # token should look like: "bot1509893058:AAD3uC_cmyxDQJfBZtQgs2E4-K55xivO8Wc" 
